--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Am in prep 9</h1>
+    <h1>PREP-IX Form</h1>
     <p>i love coding</p>
+
+    <form action="">
+        <h4>favourite food</h4>
+        <input type="radio" name="food" id="opt-1">
+        <label for="">matooke</label>
+        <br>
+        <input type="radio" name="food" id="opt-2">
+        <label for="">meat</label>
+        <br>
+        <input type="radio" name="food" id="opt-3">
+        <label for="">chapatti</label>
+        <br>
+        <input type="radio" name="food" id="opt-4">
+        <label for="">pizza</label>
+    </form>
 </body>
 </html>
