--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>PREP-IX Form</h1>
     <p>i love coding</p>
+    <img src="4.jpg" height="400px" >
 
     <form action="">
         <h4>favourite food</h4>
